src/tests/fixtures/typename/ImplementorMissingTypename.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export class User implements IPerson {
  /** @GQLField */
  name: string = "Alice";
}

/** @GQLInterface */
export interface IPerson {
  /** @GQLField */
  name: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/ImplementorMissingTypename.ts:2:14 - error: Missing __typename on `User`. The type `IPerson` is used in a union or interface, so it must have a `__typename` field.

2 export class User implements IPerson {
               ~~~~
